--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "express-formidable": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "dotenv": "^16.0.0"
   },
   "devDependencies": {
-    "dotenv": "^16.0.0",
     "nodemon": "^2.0.15"
   }
 }
